; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/qat/qat_common/extr_qat_uclo.c_qat_uclo_del_suof.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/qat/qat_common/extr_qat_uclo.c_qat_uclo_del_suof.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.icp_qat_fw_loader_handle = type { %struct.icp_qat_suof_handle* }
%struct.icp_qat_suof_handle = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.icp_qat_suof_handle* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.icp_qat_fw_loader_handle*)* @qat_uclo_del_suof to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qat_uclo_del_suof(%struct.icp_qat_fw_loader_handle* %0) #0 {
  %2 = alloca %struct.icp_qat_fw_loader_handle*, align 8
  %3 = alloca %struct.icp_qat_suof_handle*, align 8
  store %struct.icp_qat_fw_loader_handle* %0, %struct.icp_qat_fw_loader_handle** %2, align 8
  %4 = load %struct.icp_qat_fw_loader_handle*, %struct.icp_qat_fw_loader_handle** %2, align 8
  %5 = getelementptr inbounds %struct.icp_qat_fw_loader_handle, %struct.icp_qat_fw_loader_handle* %4, i32 0, i32 0
  %6 = load %struct.icp_qat_suof_handle*, %struct.icp_qat_suof_handle** %5, align 8
  store %struct.icp_qat_suof_handle* %6, %struct.icp_qat_suof_handle** %3, align 8
  %7 = load %struct.icp_qat_suof_handle*, %struct.icp_qat_suof_handle** %3, align 8
  %8 = getelementptr inbounds %struct.icp_qat_suof_handle, %struct.icp_qat_suof_handle* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.icp_qat_suof_handle*, %struct.icp_qat_suof_handle** %9, align 8
  %11 = call i32 @kfree(%struct.icp_qat_suof_handle* %10)
  %12 = load %struct.icp_qat_suof_handle*, %struct.icp_qat_suof_handle** %3, align 8
  %13 = getelementptr inbounds %struct.icp_qat_suof_handle, %struct.icp_qat_suof_handle* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store %struct.icp_qat_suof_handle* null, %struct.icp_qat_suof_handle** %14, align 8
  %15 = load %struct.icp_qat_fw_loader_handle*, %struct.icp_qat_fw_loader_handle** %2, align 8
  %16 = getelementptr inbounds %struct.icp_qat_fw_loader_handle, %struct.icp_qat_fw_loader_handle* %15, i32 0, i32 0
  %17 = load %struct.icp_qat_suof_handle*, %struct.icp_qat_suof_handle** %16, align 8
  %18 = call i32 @kfree(%struct.icp_qat_suof_handle* %17)
  %19 = load %struct.icp_qat_fw_loader_handle*, %struct.icp_qat_fw_loader_handle** %2, align 8
  %20 = getelementptr inbounds %struct.icp_qat_fw_loader_handle, %struct.icp_qat_fw_loader_handle* %19, i32 0, i32 0
  store %struct.icp_qat_suof_handle* null, %struct.icp_qat_suof_handle** %20, align 8
  ret void
}

declare dso_local i32 @kfree(%struct.icp_qat_suof_handle*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
